# BDCourse

./: config.py  main.py  pyproject.toml
src/: db_class.py  db_connect.py  get_vacancy.py  utils.py
